@@ -10,3 +10,4 @@ require 'action_controller/test_process'
 ActionController::Base.logger = nil
 ActionController::Base.ignore_missing_templates = false
 ActionController::Routing::Routes.reload rescue nil
+
