@@ -1,6 +1,8 @@
 *SVN*
 
-* Improved performance with 5-30% through a series of Action Pack optimizations #1811 [Stefan Kaes]
+* Improved performance of test app req/sec with ~10% refactoring the render method #1823 [Stefan Kaes]
+                                  
+* Improved performance of test app req/sec with 5-30% through a series of Action Pack optimizations #1811 [Stefan Kaes]
 
 * Changed caching/expiration/hit to report using the DEBUG log level and errors to use the ERROR log level instead of both using INFO
 
